# perx-core-test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py
app/core/: config.py  db.py  dependencies.py  lifespan.py  redis.py
